--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   background-color: #2f74c0;
-  font-family: serif;
+  font-family: sanserif;
 }
 
 .heading {
